editor and more proc/func/trig

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     };
   </script>
 
+  <hr>
+  <div style="text-align:center">
+    <a href="/">home</a> |
+    <a href="/editor">editor</a> | 
+    <a href="/ddl">ddl</a> |
+    <a href="/artifacts">artifacts</a>
+  </div>
 </body>
 
 </html>
